Insert blurb and fix wrapping/sizing

--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,6 @@
 
 :root {
     --sidebar-width: min(35%, 600px);
-    --signup-width: calc(100% - var(--sidebar-width))
 }
 
 a {
@@ -17,6 +16,14 @@ body {
     display: flex;
     min-height: 100vh;
     font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+#blurb {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    padding: 40px;
+    margin-top: 10vh;
 }
 
 #container {
@@ -64,7 +71,6 @@ body {
 #signup-container {
     display: flex;
     flex-direction: column;
-    min-width: var(--signup-width);
 }
 
 #form {
@@ -74,9 +80,11 @@ body {
     padding-bottom: 40px;
 }
 
+
 #signup {
-    width: min(450px, 70vw);
+    width: min(450px, 90%);
 }
+
 
 .labeltext {
     font-size: 24px;
